--- a/Views/Home/PictureUpload.cshtml
+++ b/Views/Home/PictureUpload.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "Upload Hemispherical Pictures";
 }
-<link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+@*<link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
 <script>
     //var Dropzone = require("enyo-dropzone");
     Dropzone.autoDiscover = false;
@@ -70,6 +70,7 @@
         color: red;
         font-weight: bold;
     }
+
 </style>
 
 <h1>Upload Hemispherical Pictures</h1>
@@ -77,47 +78,99 @@
 
 
 <div id="emptyfields" class="emptyfields">
-    <h3>Please complete all fields.</h3>
+    <p>Please complete all fields.</p>
 </div>
 
 <div class="container" id="container">
-    <fieldset>
-        <legend>Camera Setup</legend>
-        @Html.Label("Site: ")<br />
-        @Html.DropDownListFor(m => m.selectedSite, new SelectList(Model.user.sites, "ID", "title"))<br />
-        @Html.Label("Person: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.person)<br />
-        @*@Html.Label("Slope (0° - 90°): ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.slope, new { @class = "decimalOnly" })<br />
-        @Html.Label("Slope Aspect (0° - 360°): ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.slopeAspect, new { @class = "decimalOnly" })<br />*@
-        @Html.Label("Camera Setup: ")<br />
-        @Html.DropDownListFor(m => m.uploadSet.cameraSetup.ID, new SelectList(Model.user.cameraSetups, "ID", "title"), "-- New Camerasetup --")<br />
-        @Html.Label("Camera type: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.cameraType, new { @class = "camsetup" })<br />
-        @Html.Label("Camera Serial number: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.cameraSerial, new { @class = "camsetup" })<br />
-        @Html.Label("Lens Type: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensType, new { @class = "camsetup" })<br />
-        @Html.Label("Lens Serial Number: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensSerial, new { @class = "camsetup" })<br />
-        @Html.Label("Lens Center Rowpixel: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensX, new { @class = "numericOnly camsetup" })<br />
-        @Html.Label("Lens Center Columnpixel: ")<br />
+    <form class="form-horizontal">
+        @*<legend>Camera Setup</legend>*@
+        <div class="form-group row clearfix">
+            @Html.Label("Site: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.DropDownListFor(m => m.selectedSite, new SelectList(Model.user.sites, "ID", "title"), new { @class = "form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Person: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.person, new { @class = "form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Camera Setup: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.DropDownListFor(m => m.uploadSet.cameraSetup.ID, new SelectList(Model.user.cameraSetups, "ID", "title"), "-- New Camerasetup --", new { @class = "form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Camera type: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.cameraType, new { @class = "camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Camera Serial number: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.cameraSerial, new { @class = "camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Lens Type: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensType, new { @class = "camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Lens Serial Number: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensSerial, new { @class = "camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Lens Center Rowpixel: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensX, new { @class = "numericOnly camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Lens Center Columnpixel: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensY, new { @class = "numericOnly camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Lens Type Projectionfunction A Parameter: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensA, new { @class = "numericOnly camsetup form-control"})
+            </div>
+        </div>
+        <div class="form-group row clearfix">
+            @Html.Label("Lens Type Projectionfunction B Parameter: ", new { @class = "control-label col-md-3"})
+            <div class="col-md-4">
+                @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensB, new { @class = "numericOnly camsetup form-control"})
+            </div>
+        </div>
+        @*@Html.Label("Lens Center Rowpixel: ")<br />
+        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensX, new { @class = "numericOnly camsetup" })*@<br />
+        @*@Html.Label("Lens Center Columnpixel: ")<br />
         @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensY, new { @class = "numericOnly camsetup" })<br />
         @Html.Label("Lens Type Projectionfunction A Parameter: ")<br />
         @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensA, new { @class = "decimalOnly camsetup" })<br />
         @Html.Label("Lens Type Projectionfunction B Parameter: ")<br />
-        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensB, new { @class = "decimalOnly camsetup" })<br />
-    </fieldset>
+        @Html.TextBoxFor(m => m.uploadSet.cameraSetup.lensB, new { @class = "decimalOnly camsetup" })<br />*@
+        @*@Html.Label("Slope (0° - 90°): ")<br />
+        @Html.TextBoxFor(m => m.uploadSet.slope, new { @class = "decimalOnly" })<br />
+        @Html.Label("Slope Aspect (0° - 360°): ")<br />
+        @Html.TextBoxFor(m => m.uploadSet.slopeAspect, new { @class = "decimalOnly" })<br />*@
+    </form>
     <table>
         <tr id="plotTable">
         </tr>
     </table>
     <div id="emptyfields2" class="emptyfields">
-        <h3>Please complete all fields.</h3>
+        <p>Please complete all fields.</p>
     </div>
-    <div id="actions" class="row">
+    <div id="actions" class="row clearfix">
         <div class="col-lg-7">
             <!-- The fileinput-button span is used to style the file input field as button -->
             <span class="btn btn-success fileinput-button">
@@ -135,14 +188,14 @@
         </div>
         <div class="col-lg-10">
             <div id="wrongfilenames" class="wrongfilenames">
-                <h3>Incorrect filenames:
+                <p>Incorrect filenames:
                     <br />
-                </h3>
+                </p>
             </div>
 
         </div>
 
-        <div class="col-lg-5">
+        <div class="col-lg-5 row clearfix">
             <!-- The global file processing state -->
             <span class="fileupload-process">
                 <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
@@ -152,23 +205,24 @@
         </div>
     </div>
 
-    <div class="table table-striped" class="files" id="previews">
+    <div class="table table-striped row clearfix files" style="width:100%" id="previews">
         <div id="template" class="file-row">
-            <div>
+            @*<div>
                 <span class="preview">
                     <img data-dz-thumbnail /></span>
-            </div>
+            </div>*@
             <div>
                 <p class="name" data-dz-name></p>
                 <strong class="error text-danger" data-dz-errormessage></strong>
             </div>
-            <div>
-                <p class="size" data-dz-size></p>
+            <div class="size" data-dz-size></div>
+            <div style="width:300px;">
+                @*<span class="size" data-dz-size></span>*@
                 <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
                     <div class="progress-bar progress-bar-success" style="width: 0%;" data-dz-uploadprogress></div>
                 </div>
             </div>
-            <div>
+            <div style="width:150px;">
                 @*<button class="btn btn-primary start">
                     <i class="glyphicon glyphicon-upload"></i>
                     <span>Start</span>
@@ -177,10 +231,10 @@
                     <i class="glyphicon glyphicon-ban-circle"></i>
                     <span>Cancel</span>
                 </button>
-                <button data-dz-remove class="btn btn-danger delete">
+@*                <button data-dz-remove class="btn btn-danger delete">
                     <i class="glyphicon glyphicon-trash"></i>
                     <span>Delete</span>
-                </button>
+                </button>*@
             </div>
         </div>
     </div>
@@ -325,6 +379,7 @@
             //debugger;
             var files = myDropzone.getFilesWithStatus(Dropzone.ADDED);
             var filenamesok = true;
+            $(".emptyfields").hide();
             //Check filename            
             var re = /^[a-zA-Z]{2}-[a-zA-Z]{3}_[0-9]{8}_[a-zA-Z]{1}[0-9]{2}.[a-zA-Z0-9]{3}$/;
 
@@ -361,6 +416,7 @@
                 myDropzone.options.params["plots"] = plots;
 
                 myDropzone.enqueueFiles(files);
+                $("#wrongfilenames").hide();
             }
             else {
                 $("#wrongfilenames").show();
