--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-<h3>Choose your action:</h3>
+<h1>Index</h1>
+<h5>Choose your action:</h5>
 @*@Html.ActionLink("Upload Hemispherical Pictures", "PictureUpload")
 @Html.ActionLink("Upload Data Files", "FileUpload")*@
 <style>
@@ -16,11 +16,11 @@
         text-decoration:none;
         }
 </style>
-<center>
-<a href="@Url.Action("PictureUpload")">
-<img src="~/Images/hemButton.png" class="button" />
-</a>
+<div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("PictureUpload")" class="button rounded fill-highlight">
+@*<img src="~/Images/hemButton.png" class="button" />*@
+    @*<p class="box -hero -doublemargin fill-main text-centered rounded">Upload Hemispherical Pictures</p>*@
+    Upload Hemispherical Pictures
+</a></div>
 @*<a href="@Url.Action("FileUpload")">
 <img src="~/Images/ancButton.png" class="button"/>
 </a>*@
-    </center>
